# scenable

./: Cargo.toml  README.md
i18n/en-GB/: scenable.ftl
src/: app.rs  history.rs  i18n.rs  main.rs  settings.rs  state.rs
src/parsers/: inifile.rs  mod.rs  scenery_packs.ini  scenery_packs.rs
src/parsers/snapshots/: scenable__parsers__scenery_packs__test__scenery_pack-2.snap  scenable__parsers__scenery_packs__test__scenery_pack.snap  scenable__parsers__scenery_packs__test__scenery_packs_ini.snap
src/view/: mod.rs
src/view/page/: mod.rs  scenery_packs.rs  setup.rs
