[package]
name = "scenable"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "3.0"
color-eyre = "0.5"
crossbeam-channel = "0.5"
egui_glium = "0.12"
egui = "0.12"
epi = "0.12"
eyre = "0.6"
i18n-embed = { version = "0.12", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.5"
im-native-dialog = "0.1"
lazy_static = "1.4"
nom = "6.1"
ron = "0.6"
rust-embed = "5.9"
serde = "1.0"
serde_derive = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
pretty_assertions = "0.7"
insta = "1.7"