[package]
name = "scenable"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4"
color-eyre = "0.6"
crossbeam-channel = "0.5"
egui_glium = "0.16"
egui = "0.16"
epi = "0.16"
eyre = "0.6"
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6"
im-rc = "15"
im-native-dialog = "0.3"
lazy_static = "1.4"
nom = "7"
rand = "0.8"
reactive-state = { version = "0.3", features = ["simple_logger"] }
ron = "0.7"
rust-embed = "6"
serde = "1.0"
serde_derive = "1.0"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "env-filter"] }

[dev-dependencies]
pretty_assertions = "1"
insta = "1.7"
